--- a/codePens.html
+++ b/codePens.html
@@ -20,9 +20,9 @@ body { font-family: 'Oregano', cursive;
 		   border: 2px solid;
 		   border-radius: 25px;
 } 
-#current { color: #000000;
+.current { color: #000000;
 }
-#past { color: #A9A9A9;
+.past { color: #A9A9A9;
 }
 header { background-color: #000000;
          color: #FFFFFF;
@@ -48,6 +48,9 @@ h2 { color: #000000;
 h3 { color: #A9A9A9; 
      font-family: 'Oregano', cursive;
 	 font-size: 160%;
+}
+p { font-family: 'Oregano', cursive;
+	font-size: 140%;
 }
 nav { float: left;
 	  width: 160px;
@@ -132,7 +135,6 @@ footer { font-size:70%;
         width: 100%;
     }
 }
-
 .clearfix:after {
     content: "";
     display: table;
@@ -158,18 +160,14 @@ footer { font-size:70%;
     </ul>
   </nav>
   <main role="main">
-  		<div id="current"><h2>People Cards Code Pens</h2>
-    	<p>
-        <ul>
+  		<div current><h2>People Cards Code Pens</h2>
+    		<p><ol>
         <li><a href="http://codepen.io/lil33/pen/RRpBLK" target="_blank">Selim</a></li>
-        </ul>
-        </p>
+        </ol></p>
     	</div>
-    	
-     </main>
-   <footer><p></p>
+    </main>
+     <footer><p></p>
    </footer>
   </div>
  </body>
 </html>
-
