--- a/index.html
+++ b/index.html
@@ -23,8 +23,19 @@
     </ul>
   </nav>
   <main role="main">
-  	<div class="current"><h2 class="current">Week Three</h2>
-    <div class="responsive">
+  <div class="current"><h2 class="current">Week Four</h2>
+  </div>
+  	<div class="past"><h2 class="past">Week Three</h2>
+    	<h3>Answers to Journal Questions</h3>
+        <dl>
+        <dt>What did you accomplish today?</dt>
+        <dd>Shaunalynn and I brainstormed about my project. We came-up with some really good ideas. It's been a great exchange, because we're both interested in the project idea. I read the pair programming bits, and I really think that trust and shared interests are key. It seems that it would either be really great, or it would be unbearable. Sometimes, people need to bang their heads on their own in order to gain a greater understanding of the subject. I'm definitely a solo head-banger and somewhat introverted, but I'm open to working with like-minded others. However, I would resent being forced to work that intimately and on a regular basis with someone with whom I would have to really struggle to sync--it would be unproductive at best.
+<dt>What do you aim to have done by next session?</dt>
+<dd>I was trying to produce something acceptable with the codepen for the people card, but I was unsuccessful.</dd>
+<dt>What can we (the teaching team) do to help?</dt>
+<dd>I'm not accustomed to asking for help, so it's on me; not you. Also, there are some things that I just have to work through on my own in order to regain what I've lost. For class, I think it would be really cool if you would teach a thing about editing jQuery files to eliminate the unnecessary bits for specific applications.</dd>
+        <h3>Answers to the Project Questions</h3>
+        <div class="responsive">
  				<div class="img">
  			 		<a target="_blank" href="images/projMock-up1.jpg">
     					<img src="images/projMock-up1.jpg" alt="Project Mock-up 1" width="200" height="200">
@@ -32,7 +43,6 @@
   					<div class="desc">Project Mock-up Fig. 1</div>
 				</div>
         </div>
-    		<h3>Answers to the Project Questions</h3>
         <dl>
 <dt>What is your idea?</dt>
 <dd>I plan to create a GUI for an <a href="https://www.arduino.cc/" target="_blank">Arduino </a>project. I have made a simple keyboard instrument with four keys; emitting frequencies for middle C, D, E and F. (I may decide to add to and change the frequencies.) The interface will control the instrument, so that when a GUI key is pressed the Arduino keyboard will emit the corresponding frequency. Reciprocally, when an Arduino key (button) is pressed the GUI will indicate that the corresponding key has been pressed, and the computer will emit the corresponding frequency. Additionally, pressed keys will result in addtional imagry generated within a defined space in the GUI. The imagery will be generated in response to the key pressed and the duration of time that the key is depressed. I haven't yet determined the exact nature of the imagery.</dd>
