--- a/index.html
+++ b/index.html
@@ -24,16 +24,25 @@
   </nav>
   <main role="main">
   <div class="current"><h2 class="current">Week Four</h2>
-  </div>
+  <h3>Answers to Journal Questions</h3>
+    <dl>
+      <dt>What did you accomplish today?</dt>
+        <dd>Molly showed me how to trigger multiple animations in .css by either using the animationend event or the animation-delay property; also using eventlisteners in .js</dd>
+      <dt>What do you aim to have done by next session?</dt>
+        <dd>I will draw some images by hand for my project, and think about how I want the images to animate.</dd>
+      <dt>What can we (the teaching team) do to help?</dt>
+        <dd>Anything you do will be interesting, but I don't need anything at the moment specifically for my project. I will utilize the snippet request forms after I have stared at the same code for a long time without producing intended results. :-D</dd>
+    </dl>
+    </div>
   	<div class="past"><h2 class="past">Week Three</h2>
     	<h3>Answers to Journal Questions</h3>
         <dl>
         <dt>What did you accomplish today?</dt>
-        <dd>Shaunalynn and I brainstormed about my project. We came-up with some really good ideas. It's been a great exchange, because we're both interested in the project idea. I read the pair programming bits, and I really think that trust and shared interests are key. It seems that it would either be really great, or it would be unbearable. Sometimes, people need to bang their heads on their own in order to gain a greater understanding of the subject. I'm definitely a solo head-banger and somewhat introverted, but I'm open to working with like-minded others. However, I would resent being forced to work that intimately and on a regular basis with someone with whom I would have to really struggle to sync--it would be unproductive at best.
+        <dd>Shaunalynn and I brainstormed about my project. We came-up with some really good ideas. It's been a great exchange, because we're both interested in the project idea. I read the pair programming bits, and I really think that trust and shared interests are key. It seems that it would either be really great, or it would be unbearable. Sometimes, people need to bang their heads on their own in order to gain a greater understanding of the subject. I'm definitely a solo head-banger and somewhat introverted, but I'm open to working with like-minded others. However, I would resent being forced to work that intimately and on a regular basis with someone with whom I would have to really struggle to sync--it would be unproductive at best.</dd>
 <dt>What do you aim to have done by next session?</dt>
 <dd>I was trying to produce something acceptable with the codepen for the people card, but I was unsuccessful.</dd>
 <dt>What can we (the teaching team) do to help?</dt>
-<dd>I'm not accustomed to asking for help, so it's on me; not you. Also, there are some things that I just have to work through on my own in order to regain what I've lost. For class, I think it would be really cool if you would teach a thing about editing jQuery files to eliminate the unnecessary bits for specific applications.</dd>
+<dd>I'm not accustomed to asking for help, so it's on me; not you. Also, there are some things that I just have to work through on my own in order to regain what I've lost. For class, I think it would be really cool if you would teach a thing about editing jQuery files to eliminate the unnecessary bits for specific applications.</dd></dl>
         <h3>Answers to the Project Questions</h3>
         <div class="responsive">
  				<div class="img">
