--- a/index.html
+++ b/index.html
@@ -23,8 +23,37 @@
     </ul>
   </nav>
   <main role="main">
-  <div class="current"><h2 class="current">Week Four</h2>
-  <h3>Answers to Journal Questions</h3>
+  <div class="current"><h2 class="current">Week Five</h2>
+  <h3>What I accomplished today (18 JUL): the class exercise... <a href="inputVelocity.html" target="_blank">here.</a></h3>
+    <dl>
+      <dt>What information did I need to complete the exercise--data model, schema, which application-programming interfaces (APIs)?</dt>
+        <dd><a href="https://michellechandra.github.io/synchronicity.html" target="_blank">Examples: latitude, longitude, "sunrise" and "sunset"</a></dd>
+        <dt>Choose the visualization you want to work with.</dt>
+        <dd><a href="https://gist.github.com/duffles/948d4407d0e7d0ec26c52df43f7a9a49#file-input-to-velocity-html" target="_blank">input-to-velocity.html</a></dd>
+      <dt>Decide what input you want to generate digitally.</dt>
+        <dd>I wanted to use data indicating the orbital location of the international space station to control the velocity.</dd>   
+      <dt>Blackbox the code you'll need to write.</dt>
+        <dd>I needed variables which define orbital location. I found some <a href="http://open-notify.org/Open-Notify-API/ISS-Location-Now/" target="_blank">here.</a></dd>
+        <dt>Then start building.</dt>
+        <dd>Alec and Shaunalynn showed me how to use <a href="https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API/Using_Fetch" target="_blank">the Fetch API </a>and <a href="http://cors.io/" target="_blank">work around </a>the "No 'Access-Control-Allow-Origin' header...."</dd>
+      <dt>I had to figure-out how to grab the variables and insert them into the code.</dt>
+        <dd>I had never used <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON" target="_blank">JSON. </a>I found <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/parse" target="_blank">the JSON.parse method.</a></dd>
+      </dl>
+      </div>
+  <div class="past"><h2 class="past">Week Four</h2>
+  <h3>What I accomplished today (13 JUL): I found information to begin coding for my project.</h3>
+    <dl>
+      <dt>How do I tie individual images together so that they move in a coordinated manner via mouseover?</dt>
+        <dd>http://www.tutorialspoint.com/javascript/javascript_animation.htm</dd>
+        <dd>http://paperjs.org/</dd>
+      <dt>How do I interpret audio from users' mics?</dt>
+        <dd>https://github.com/cwilso/PitchDetect</dd>
+        <dt>How do I interpret audio from Arduino input?</dt>
+        <dd>http://breakoutjs.com/</dd>
+      <dt>How do I tie individual images together so that they move in a coordinated manner via audio input?</dt>
+        <dd>Hmm...</dd>
+      </dl>
+  <h3>Answers to Journal Questions (11 JUL)</h3>
     <dl>
       <dt>What did you accomplish today?</dt>
         <dd>Molly showed me how to trigger multiple animations in .css by either using the animationend event or the animation-delay property; also using eventlisteners in .js</dd>
