--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <dt>Then start building.</dt>
         <dd>Alec and Shaunalynn showed me how to use <a href="https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API/Using_Fetch" target="_blank">the Fetch API </a>and <a href="http://cors.io/" target="_blank">work around </a>the "No 'Access-Control-Allow-Origin' header...."</dd>
       <dt>I had to figure-out how to grab the variables and insert them into the code.</dt>
-        <dd>I had never used <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON" target="_blank">JSON. </a>I found <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/parse" target="_blank">the JSON.parse method.</a></dd>
+        <dd>I had never used <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON" target="_blank">JSON. </a>I found <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/parse" target="_blank">the JSON.parse method. </a>(Which, as it turns-out, has nothing to do with what I wanted it to do! So, Alec showed me how to modify the code so that it will redraw the circles based upon the varable distance between the sum of coordinates redrawn every second.</dd>
       </dl>
       </div>
   <div class="past"><h2 class="past">Week Four</h2>
