--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </nav>
   <main role="main">
   <div class="current"><h2 class="current">Week Five</h2>
-  <h3>What I accomplished today (18 JUL): the class exercise... <a href="inputVelocity.html" target="_blank">here.</a></h3>
+  <h3>What I accomplished today (18 JUL + *20 JUL): the class exercise... <a href="inputVelocity.html" target="_blank">here.</a></h3>
     <dl>
       <dt>What information did I need to complete the exercise--data model, schema, which application-programming interfaces (APIs)?</dt>
         <dd><a href="https://michellechandra.github.io/synchronicity.html" target="_blank">Examples: latitude, longitude, "sunrise" and "sunset"</a></dd>
@@ -36,8 +36,8 @@
         <dd>I needed variables which define orbital location. I found some <a href="http://open-notify.org/Open-Notify-API/ISS-Location-Now/" target="_blank">here.</a></dd>
         <dt>Then start building.</dt>
         <dd>Alec and Shaunalynn showed me how to use <a href="https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API/Using_Fetch" target="_blank">the Fetch API </a>and <a href="http://cors.io/" target="_blank">work around </a>the "No 'Access-Control-Allow-Origin' header...."</dd>
-      <dt>I had to figure-out how to grab the variables and insert them into the code.</dt>
-        <dd>I had never used <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON" target="_blank">JSON. </a>I found <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/parse" target="_blank">the JSON.parse method. </a>(Which, as it turns-out, has nothing to do with what I wanted it to do! So, Alec showed me how to modify the code so that it will redraw the circles based upon the varable distance between the sum of coordinates redrawn every second.</dd>
+        <dt>I had to figure-out how to grab the variables and insert them into the code.</dt>
+        <dd>I had never used <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON" target="_blank">JSON. </a>I found <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/parse" target="_blank">the JSON.parse method. </a>(Which, as it turns-out, has nothing to do with what I wanted it to do! *So, Alec showed me how to modify the code so that it will redraw the circles based upon the varable distance between the sum of coordinates redrawn every second.</dd>
       </dl>
       </div>
   <div class="past"><h2 class="past">Week Four</h2>
