--- a/index.html
+++ b/index.html
@@ -20,10 +20,21 @@
       <li><a href="http://dgmd.github.io" target="_blank">DGMD S-15</a></li>
       <li><a href="https://dgmd.slack.com" target="_blank">Slack</a></li>
       <li><a href="codePens.html" target="_blank">Code Pens</a></li>
+      <li><a href="project.html" target="_blank">Project</a></li>
     </ul>
   </nav>
   <main role="main">
-  <div class="current"><h2 class="current">Week Five</h2>
+  <div class="current"><h2 class="current">Week Six</h2>
+  <h3>Project code is <a href="project.html" target="_blank">here.</a></h3>
+    <dl>
+      <dt>What did you accomplish today (25 JUL)?</dt>
+        <dd></dd>
+      <dt>What do you aim to have done by next session?</dt>
+        <dd></dd>
+      <dt>What can we (the teaching team) do to help?</dt>
+        <dd></dd>
+      </dl>
+  <div class="past"><h2 class="past">Week Five</h2>
   <div class="responsive">
  				<div class="img">
  			 		<a target="_blank" href="images/nodeError.jpg">
