--- a/project.html
+++ b/project.html
@@ -66,7 +66,7 @@
   <p>This web page interfaces with an Arduino keyboard. Alternatively, you may scroll down for a digital keyboard.</p>
     <div id="background">
       <img id="ant" onmouseover="function()" onmouseout="function()" border="0" src="images/ant.png" alt="Ant">
-      <img id="ladyBug" onmouseover="function()" onmouseout="function()" border="0" src="images/ladybug.png" alt="ladyBug">
+      <img id="ladyBug" onmouseover="function()" onmouseout="function()" border="0" src="images/ladyBug.png" alt="ladyBug">
       <img id="grasshopper" onmouseover="function()" onmouseout="function()" border="0" src="images/grasshopper.png" alt="grasshopper">
       <img id="butterfly" onmouseover="function()" onmouseout="function()" border="0" src="images/butterfly.png" alt="butterfly">
     </div>
