--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <li><a href="https://dgmd.slack.com" target="_blank">Slack</a></li>
       <li><a href="codePens.html" target="_blank">Code Pens</a></li>
       <li><a href="project.html" target="_blank">Project</a></li>
+      <li><a href="presentation.html" target="_blank">Presenation</a></li>
     </ul>
   </nav>
   <main role="main">
@@ -28,9 +29,15 @@
   <h3>Project code is <a href="project.html" target="_blank">here.</a></h3>
     <dl>
       <dt>What did you accomplish today (25 JUL)?</dt>
-        <dd></dd>
+        <ul style="list-style-type:square">
+        <li>Forked, cloned and explored <a href="http://lab.hakim.se/reveal-js/#/" target="_blank">reveal.js</a> and <a href="http://lab.hakim.se/zoom-js/" target="_blank">zoom.js</a></li>
+        <li>Working on <a href="presentation.html" target="_blank">presentation</a></li>
+        </ul>
       <dt>What do you aim to have done by next session?</dt>
-        <dd></dd>
+        <ol>
+        <li>project illustration animations (.css or .js or both TBD)</li>
+        <li>make keyboard image map work with animations</li>
+        </ol>
       <dt>What can we (the teaching team) do to help?</dt>
         <dd></dd>
       </dl>
