--- a/input-to-background-color.html
+++ b/input-to-background-color.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <script src='generateInput.js'>
+    <script src='js/generateInput.js'>
     	// This is the only new line we added to our sketch; it simply redefines `generateInput`, we have to comment out our `generateInput` though…
     </script>
     <script>
