--- a/index.html
+++ b/index.html
@@ -19,14 +19,39 @@
     <ul>
       <li><a href="http://dgmd.github.io" target="_blank">DGMD S-15</a></li>
       <li><a href="https://dgmd.slack.com" target="_blank">Slack</a></li>
-      <li><a href="codePens.html" target="_blank">Code Pens</a></li>
+      <li><a href="http://codepen.io/lil33/pen/RRpBLK" target="_blank">People Card</a></li>
       <li><a href="project.html" target="_blank">Project</a></li>
       <li><a href="presentation.html" target="_blank">Presenation</a></li>
     </ul>
   </nav>
   <main role="main">
-  <div class="current"><h2 class="current">Week Six</h2>
+  <div class="current"><h2 class="current">Week Seven</h2>
+  <h3>Presentation code is <a href="presentation.html" target="_blank">here.</a></h3>
+    <dl>
+      <dt>What did you accomplish today (1 AUG)?</dt>
+        <ul style="list-style-type:square">
+        <li>Working on <a href="presentation.html" target="_blank">presentation</a></li>
+        <li>Working on <a href="project.html" target="_blank">project</a></li>
+        </ul>
+        <dd></dd>
+      </dl>
+  <div class="past"><h2 class="past">Week Six</h2>
   <h3>Project code is <a href="project.html" target="_blank">here.</a></h3>
+  <dl>
+      <dt>What did you accomplish today (27 JUL)?</dt>
+        <ul style="list-style-type:square">
+        <li>Shaunalynn helped me <a href="dataAttributeRendering2.html" target="_blank">reveal.js</a> modify this</a>.</li>
+        <li>Working on <a href="presentation.html" target="_blank">presentation</a></li>
+        <li>Working on <a href="project.html" target="_blank">project</a></li>
+        </ul>
+      <dt>What do you aim to have done by next session?</dt>
+        <ol>
+        <li>project illustration animations (.css or .js or both TBD)</li>
+        <li>make keyboard image map work with animations</li>
+        </ol>
+      <dt>What can we (the teaching team) do to help?</dt>
+        <dd></dd>
+      </dl>
     <dl>
       <dt>What did you accomplish today (25 JUL)?</dt>
         <ul style="list-style-type:square">
