--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <dl>
       <dt>What did you accomplish today (27 JUL)?</dt>
         <ul style="list-style-type:square">
-        <li>Shaunalynn helped me <a href="dataAttributeRendering2.html" target="_blank">reveal.js</a> modify this</a>.</li>
+        <li>Shaunalynn helped me <a href="dataAttributeRendering2.html" target="_blank">modify this</a></a>.</li>
         <li>Working on <a href="presentation.html" target="_blank">presentation</a></li>
         <li>Working on <a href="project.html" target="_blank">project</a></li>
         </ul>
